[package]
name = "maglev-r"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = true
lto = true
opt-level = "s"

[profile.release]
lto = true
debug = true
opt-level = "s"

[dependencies]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "time-driver-tim2",
    "stm32f401rc",
    "memory-x",
    "unstable-pac",
    "exti",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
    "task-arena-size-8192",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy" }

embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }

static_cell = "2.0"
ssd1306-i2c = "0.1.5"
embedded-graphics = "0.8.1"
format_no_std = "1.2"
micromath = "2.1.0"